salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Account.CustomerSuccessManagerCSM__r.FirstName+&#39; &#39;+ Account.CustomerSuccessManagerCSM__r.LastName</formula>
    <label>Customer Success Manager</label>
    <type>Text</type>
</CustomField>