salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AccountForOpenCases__c.field-meta.xml
<CustomField>
    <fullName>AccountForOpenCases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Account field is used to display Only open cases related list on Account layout. 
This field value is filled with &quot;Account&quot;  using workflow field update</description>
    <label>Account For Open Cases</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Cases</relationshipLabel>
    <relationshipName>OpenCases</relationshipName>
    <type>Lookup</type>
</CustomField>