salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>This field is use to store Account Name related to the Case</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>