salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AMSupportSuspendedOverride__c.field-meta.xml
<CustomField>
    <fullName>AMSupportSuspendedOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Support Suspended Override</label>
    <type>Checkbox</type>
</CustomField>