salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AnsweredInJive__c.field-meta.xml
<CustomField>
    <fullName>AnsweredInJive__c</fullName>
    <label>Answered in Jive</label>
    <type>DateTime</type>
</CustomField>