salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ArticleURL1__c.field-meta.xml
<CustomField>
    <fullName>ArticleURL1__c</fullName>
    <label>Article URL # 1</label>
    <type>Url</type>
</CustomField>