salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ArticleURL2__c.field-meta.xml
<CustomField>
    <fullName>ArticleURL2__c</fullName>
    <label>Article URL # 2</label>
    <type>Url</type>
</CustomField>