salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ArticleURL3__c.field-meta.xml
<CustomField>
    <fullName>ArticleURL3__c</fullName>
    <label>Article URL # 3</label>
    <type>Url</type>
</CustomField>