salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AssignedToCSM__c.field-meta.xml
<CustomField>
    <fullName>AssignedToCSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to CSM</label>
    <type>Checkbox</type>
</CustomField>