salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AssignmentTime__c.field-meta.xml
<CustomField>
    <fullName>AssignmentTime__c</fullName>
    <label>Assignment Time</label>
    <type>DateTime</type>
</CustomField>