salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AssignmentTimeTLMD__c.field-meta.xml
<CustomField>
    <fullName>AssignmentTimeTLMD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Time = TLMD</label>
    <type>Checkbox</type>
</CustomField>