salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/AvailabilityTime__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityTime__c</fullName>
    <defaultValue>&quot;9am-5pm&quot;</defaultValue>
    <inlineHelpText>Please enter the times of day you&#39;re available for a call.</inlineHelpText>
    <label>Availability Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>