salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/BusinessImpact__c.field-meta.xml
<CustomField>
    <fullName>BusinessImpact__c</fullName>
    <label>Business Impact</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>