salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Case_Filter__c.field-meta.xml
<CustomField>
    <fullName>Case_Filter__c</fullName>
    <formula>IF($Profile.Name &lt;&gt; &#39;R7 Customer Community Login&#39;,true,IF(OR( AND(ReassigntoSupport__c = false ,NOT(CONTAINS($Label.CSRCaseOrigin,Text(Origin)))),ReassigntoSupport__c = true),true,false))</formula>
    <label>Case Filter</label>
    <type>Checkbox</type>
</CustomField>