salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseClosedDate__c.field-meta.xml
<CustomField>
    <fullName>CaseClosedDate__c</fullName>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>