salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseFeedback__c.field-meta.xml
<CustomField>
    <fullName>CaseFeedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Feedback</label>
    <type>Checkbox</type>
</CustomField>