salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseNextSteps__c.field-meta.xml
<CustomField>
    <fullName>CaseNextSteps__c</fullName>
    <label>Case Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>