salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseOpenedHourEastern__c.field-meta.xml
<CustomField>
    <fullName>CaseOpenedHourEastern__c</fullName>
    <formula>IF 
( 
VALUE ( MID ( TEXT ( CreatedDate ), 12, 2)) &lt; 5, 
VALUE( MID (TEXT ( CreatedDate ), 12, 2)) + 19, 
VALUE( MID (TEXT ( CreatedDate ), 12, 2)) - 5 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Opened Hour (eastern)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>