salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <formula>Owner:User.FirstName +&#39; &#39;+ Owner:User.LastName +&#39;&#39;+ Owner:Queue.QueueName</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>