salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseReOpenedOnce__c.field-meta.xml
<CustomField>
    <fullName>CaseReOpenedOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case ReOpened Once?</label>
    <type>Checkbox</type>
</CustomField>