salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <label>Cases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>