salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafeID - Case</label>
    <type>Text</type>
</CustomField>