salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CaseThreadId__c.field-meta.xml
<CustomField>
    <fullName>CaseThreadId__c</fullName>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; RIGHT($Organization.Id,4) &amp; &quot;._&quot; &amp; LEFT( Id ,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>