salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CobraReleaseRelated__c.field-meta.xml
<CustomField>
    <fullName>CobraReleaseRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobra Release Related</label>
    <type>Checkbox</type>
</CustomField>