salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CommentCreatedByProfile__c.field-meta.xml
<CustomField>
    <fullName>CommentCreatedByProfile__c</fullName>
    <label>Comment CreatedBy Profile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>