salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Contact.FirstName +&#39; &#39;+ Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>