salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ContactTimeZone__c.field-meta.xml
<CustomField>
    <fullName>ContactTimeZone__c</fullName>
    <formula>Contact.TimeZone__c</formula>
    <label>Contact Time Zone</label>
    <type>Text</type>
</CustomField>