salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CreatedAfterHours__c.field-meta.xml
<CustomField>
    <fullName>CreatedAfterHours__c</fullName>
    <formula>IF 
( 
DayOfWeekNumeric__c = 6, &quot;Yes&quot;,&quot;No&quot; 
)</formula>
    <label>Created After Hours</label>
    <type>Text</type>
</CustomField>