salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Createdby__c.field-meta.xml
<CustomField>
    <fullName>Createdby__c</fullName>
    <formula>CreatedBy.ContactId</formula>
    <label>Createdby</label>
    <type>Text</type>
</CustomField>