salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CriticalCaseAcctMgmt__c.field-meta.xml
<CustomField>
    <fullName>CriticalCaseAcctMgmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Case - Acct Mgmt</label>
    <type>Checkbox</type>
</CustomField>