salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CSEUrgency__c.field-meta.xml
<CustomField>
    <fullName>CSEUrgency__c</fullName>
    <label>CSE Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>