salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CSMCustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CSMCustomerGroup__c</fullName>
    <formula>TEXT(Account.CsmCustomerGroup__c)</formula>
    <label>CSM Customer Group</label>
    <type>Text</type>
</CustomField>