salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CSR_Priority__c.field-meta.xml
<CustomField>
    <fullName>CSR_Priority__c</fullName>
    <label>CSR Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2- High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
            <value>
                <fullName>5 - Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>