salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CSRCategory__c.field-meta.xml
<CustomField>
    <fullName>CSRCategory__c</fullName>
    <label>CSR Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing/Invoice Inquiry</fullName>
            </value>
            <value>
                <fullName>Documentations Request</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
            </value>
            <value>
                <fullName>Internal Email Blast</fullName>
            </value>
            <value>
                <fullName>License Resets</fullName>
            </value>
            <value>
                <fullName>Migrations - LE to IOPS</fullName>
            </value>
            <value>
                <fullName>Migrations - NXP to IVM</fullName>
            </value>
            <value>
                <fullName>Product Inquiry</fullName>
            </value>
            <value>
                <fullName>Renewals - Cancellation or Downgrade Request</fullName>
            </value>
            <value>
                <fullName>Renewals - General Inquiry</fullName>
            </value>
            <value>
                <fullName>Renewals - Payment Received</fullName>
            </value>
            <value>
                <fullName>Renewals - Quote Request</fullName>
            </value>
            <value>
                <fullName>Sales - Request for help</fullName>
            </value>
            <value>
                <fullName>Sales - Upsell/Cross Sell</fullName>
            </value>
            <value>
                <fullName>Support Credentials</fullName>
            </value>
            <value>
                <fullName>Support Escalation</fullName>
            </value>
            <value>
                <fullName>SOAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>