salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CurrentDateTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentDateTime__c</fullName>
    <formula>Now()</formula>
    <label>Current Date Time</label>
    <type>DateTime</type>
</CustomField>