salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomerEscalationTemperature__c.field-meta.xml
<CustomField>
    <fullName>CustomerEscalationTemperature__c</fullName>
    <description>This field will be updated with the latest Customer Escalation Temperature value</description>
    <label>Customer Escalation Temperature</label>
    <length>15</length>
    <type>Text</type>
</CustomField>