salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomerSuccessManager__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>