salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomerSuccessManagerCSMEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessManagerCSMEmail__c</fullName>
    <formula>Account.CustomerSuccessManagerCSM__r.Email</formula>
    <label>Customer Success Manager Email</label>
    <type>Text</type>
</CustomField>