salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomerSuccessManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessManagerEmail__c</fullName>
    <label>Customer Success Manager Email</label>
    <type>Email</type>
</CustomField>