salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomTag__c.field-meta.xml
<CustomField>
    <fullName>CustomTag__c</fullName>
    <label>Custom Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>