salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/CustomTagFilledDate__c.field-meta.xml
<CustomField>
    <fullName>CustomTagFilledDate__c</fullName>
    <label>Custom Tag Filled Date</label>
    <type>Date</type>
</CustomField>