salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DateAssigned__c.field-meta.xml
<CustomField>
    <fullName>DateAssigned__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>