salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DateCaseOwnerAssigned__c.field-meta.xml
<CustomField>
    <fullName>DateCaseOwnerAssigned__c</fullName>
    <label>Date Case Owner Assigned</label>
    <type>Date</type>
</CustomField>