salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DateCreatedAbsolute__c.field-meta.xml
<CustomField>
    <fullName>DateCreatedAbsolute__c</fullName>
    <formula>IF( 
ISNULL(DateOriginallyOpenedInNetSuite__c), 
DATEVALUE( CurrentDateTime__c ), 
DateOriginallyOpenedInNetSuite__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Created Absolute</label>
    <type>Date</type>
</CustomField>