salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DateOriginallyOpenedInNetSuite__c.field-meta.xml
<CustomField>
    <fullName>DateOriginallyOpenedInNetSuite__c</fullName>
    <label>Date Originally Opened in NetSuite</label>
    <type>Date</type>
</CustomField>