salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DateTimeOpenedInJive__c.field-meta.xml
<CustomField>
    <fullName>DateTimeOpenedInJive__c</fullName>
    <label>Date/Time Opened In Jive</label>
    <type>DateTime</type>
</CustomField>