salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DayOfWeekNumeric__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeekNumeric__c</fullName>
    <formula>/* Monday - Sunday = 1 - 7 */ 

CASE(MOD( DATEVALUE( CreatedDate ) - DATE (2000 ,1, 1) ,7), 0, 6, 1, 7, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, -1)</formula>
    <label>Day of Week (Numeric)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>