salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DiscussionURL__c.field-meta.xml
<CustomField>
    <fullName>DiscussionURL__c</fullName>
    <label>Discussion URL</label>
    <type>Url</type>
</CustomField>