salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <label>Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article present and successfully used</fullName>
            </value>
            <value>
                <fullName>Article present but needs improvement to be used successfully</fullName>
            </value>
            <value>
                <fullName>Article is not present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>