salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/DuplicateCaseId__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCaseId__c</fullName>
    <label>Duplicate Case Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>