salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/EmailReminderCount__c.field-meta.xml
<CustomField>
    <fullName>EmailReminderCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is being used for back-end logic in respect of story APPS-1740</description>
    <label>Email Reminder Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>