salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Engine_Pairing__c.field-meta.xml
<CustomField>
    <fullName>Engine_Pairing__c</fullName>
    <label>Engine Pairing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fulfillments__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributed</fullName>
            </value>
            <value>
                <fullName>Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>