salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/EnterpriseCustomer__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Customer</label>
    <type>Checkbox</type>
</CustomField>