salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/EscalatedToBackline__c.field-meta.xml
<CustomField>
    <fullName>EscalatedToBackline__c</fullName>
    <label>Escalated to Backline</label>
    <type>DateTime</type>
</CustomField>