salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/EscalatedToSustaining__c.field-meta.xml
<CustomField>
    <fullName>EscalatedToSustaining__c</fullName>
    <label>Escalated to Sustaining</label>
    <type>DateTime</type>
</CustomField>