salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/FirstResponseCompleted__c.field-meta.xml
<CustomField>
    <fullName>FirstResponseCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field use to track if the first response milestone is completed or not</description>
    <label>First Response Completed?</label>
    <type>Checkbox</type>
</CustomField>