salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Flash__c.field-meta.xml
<CustomField>
    <fullName>Flash__c</fullName>
    <description>This field will display value from related account Flash field</description>
    <label>Flash</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>