salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/FlashAlert__c.field-meta.xml
<CustomField>
    <fullName>FlashAlert__c</fullName>
    <formula>IF(ShowFlashImage__c,IMAGE(&quot;/resource/FlashImage&quot;,&#39;Flash&#39;),&#39;&#39;)</formula>
    <label>Flash Alert</label>
    <type>Text</type>
</CustomField>