salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ForceNetSuiteSync__c.field-meta.xml
<CustomField>
    <fullName>ForceNetSuiteSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force NetSuite Sync</label>
    <type>Checkbox</type>
</CustomField>