salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Fulfillments__c.field-meta.xml
<CustomField>
    <fullName>Fulfillments__c</fullName>
    <label>Fulfillments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>User Change</fullName>
            </value>
            <value>
                <fullName>Service Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>