salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/InDevelopmentHistorical__c.field-meta.xml
<CustomField>
    <fullName>InDevelopmentHistorical__c</fullName>
    <formula>IF( ISPICKVAL( Status , &#39;In Development&#39;) , true, false)</formula>
    <label>In Development Historical</label>
    <type>Checkbox</type>
</CustomField>