salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/InitialResponse__c.field-meta.xml
<CustomField>
    <fullName>InitialResponse__c</fullName>
    <label>Initial Response</label>
    <type>DateTime</type>
</CustomField>