salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/INTERNALAccountManagerEmailInEmail__c.field-meta.xml
<CustomField>
    <fullName>INTERNALAccountManagerEmailInEmail__c</fullName>
    <label>INTERNAL: account manager email in email</label>
    <type>Email</type>
</CustomField>