salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/INTERNALAtRiskNotificationMailSent__c.field-meta.xml
<CustomField>
    <fullName>INTERNALAtRiskNotificationMailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INTERNAL: at risk notification mail sent</label>
    <type>Checkbox</type>
</CustomField>