salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/INTERNALBacklineEscalatedFlag__c.field-meta.xml
<CustomField>
    <fullName>INTERNALBacklineEscalatedFlag__c</fullName>
    <formula>IF( ISNULL(EscalatedToBackline__c), 
0, 
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INTERNAL: backline escalated flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>