salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/INTERNALInternalCommentAdded__c.field-meta.xml
<CustomField>
    <fullName>INTERNALInternalCommentAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INTERNAL: Internal comment added</label>
    <type>Checkbox</type>
</CustomField>