salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/INTERNALRenewalNotificationMailSent__c.field-meta.xml
<CustomField>
    <fullName>INTERNALRenewalNotificationMailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INTERNAL: renewal notification mail sent</label>
    <type>Checkbox</type>
</CustomField>