salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/InternalYearCreatedPointMonthCreated__c.field-meta.xml
<CustomField>
    <fullName>InternalYearCreatedPointMonthCreated__c</fullName>
    <formula>YEAR( DATEVALUE( CreatedDate )) + ( MONTH (DATEVALUE( CreatedDate )) / 100 )</formula>
    <label>internalYearCreatedPointMonthCreated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>