salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsCommentCreatedFromPortal__c.field-meta.xml
<CustomField>
    <fullName>IsCommentCreatedFromPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Comment Created From Portal</label>
    <type>Checkbox</type>
</CustomField>