salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsLastCommentOrEmailFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsLastCommentOrEmailFromCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is LastComment Or Email From Customer?</label>
    <type>Checkbox</type>
</CustomField>