salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsPublicCaseComment__c.field-meta.xml
<CustomField>
    <fullName>IsPublicCaseComment__c</fullName>
    <description>this field is used to fill with the latest inserted or Updated comment to send email notification</description>
    <label>Is Public Case Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>