salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsPublicCaseCommentCreatedFlag__c.field-meta.xml
<CustomField>
    <fullName>IsPublicCaseCommentCreatedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox is used to check when the Case Comment with Public checkbox enabled to True, to send the notification to Contact</description>
    <label>Is Public Case Comment Created Flag</label>
    <type>Checkbox</type>
</CustomField>