salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IssueSubTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>IssueSubTypeDescription__c</fullName>
    <label>Issue Sub-Type description</label>
    <type>TextArea</type>
</CustomField>