salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IssueTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>IssueTypeDescription__c</fullName>
    <label>Issue-Type description</label>
    <type>TextArea</type>
</CustomField>