salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsTAM__c.field-meta.xml
<CustomField>
    <fullName>IsTAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Technical Account Manager Populated on Account or not (APPS-1449)</description>
    <label>Is TAM</label>
    <type>Checkbox</type>
</CustomField>