salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/IsThisCaseaRFE__c.field-meta.xml
<CustomField>
    <fullName>IsThisCaseaRFE__c</fullName>
    <label>Is this case a RFE?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>