salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveAnswererUsername__c.field-meta.xml
<CustomField>
    <fullName>JiveAnswererUsername__c</fullName>
    <label>Jive Answerer Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>