salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveEscalatingUsername__c.field-meta.xml
<CustomField>
    <fullName>JiveEscalatingUsername__c</fullName>
    <label>Jive Escalating Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>