salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveLikeCount__c.field-meta.xml
<CustomField>
    <fullName>JiveLikeCount__c</fullName>
    <label>Jive Like Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>