salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveTags__c.field-meta.xml
<CustomField>
    <fullName>JiveTags__c</fullName>
    <label>Jive Tags</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>