salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveType__c.field-meta.xml
<CustomField>
    <fullName>JiveType__c</fullName>
    <label>Jive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discussion</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>