salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/JiveViewsCount__c.field-meta.xml
<CustomField>
    <fullName>JiveViewsCount__c</fullName>
    <label>Jive Views Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>