salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/KnowledgeArticle__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArticle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>