salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Last90Days__c.field-meta.xml
<CustomField>
    <fullName>Last90Days__c</fullName>
    <formula>IF(AND( LastModifiedDate &lt;NOW(),LastModifiedDate&gt;(NOW()-90)) ,1,0)</formula>
    <label>Last 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>