salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastCommentDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastCommentDateTime__c</fullName>
    <label>Last Comment Date/Time</label>
    <type>DateTime</type>
</CustomField>